[package]
name = "rust-actix"
version = "0.1.0"
authors = ["alejandroq <quesadaaba@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-service = "1.0.0"
futures = "0.3.1"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
derive_more = "0.99.11"
thiserror = "1.0.21"
dotenv = "0.15.0"
sqlx = { version="0.3", features = [ "mysql" ] }
log = "0.4.11"
tracks-core = { path = "../tracks-core" }
uuid = { version="0.8", features=["serde", "v4"] }
actix-rt = "1"
tokio = { version="0.3.3", features=["full"] }
async-trait = "0.1.41"